--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,6 +4,8 @@ include HISTORY.rst
 include LICENSE
 include README.rst
 
+include focusedme/Ring01.wav 
+
 recursive-include tests *
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
