--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,7 +3,7 @@ include CONTRIBUTING.rst
 include HISTORY.rst
 include LICENSE
 include README.rst
-
+include focusedme/requirements.txt
 include focusedme/Ring01.wav 
 
 recursive-include tests *
