--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -39,10 +39,10 @@ jobs:
         run: poetry run mkdocs build
 
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
+          name: documentation-site
           path: site
-
   deploy:
     environment:
       name: github-pages
