--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install system dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y libasound2-dev  # Install ALSA development library
+        sudo apt-get install -y libasound2-dev portaudio19-dev python3-dev
 
     - name: Install Poetry
       uses: snok/install-poetry@v1
