refactor: Fix formatting issues and end-of-file newlines

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,8 @@ include = '\.pyi?$'
 [tool.ruff]
 line-length = 88
 target-version = "py39"
+
+[tool.ruff.lint]
 select = [
     "E",  # pycodestyle errors
     "W",  # pycodestyle warnings
