--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ python = "^3.9"
 simpleaudio = "^1.0.4"
 typer = "^0.9.0"
 rich = "^13.5.0"
+mkdocs-autorefs = "^1.4.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
