--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ python = "^3.9"
 simpleaudio = "^1.0.4"
 typer = "^0.9.0"
 rich = "^13.5.0"
+mkdocs-autorefs = "^1.4.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
@@ -50,6 +51,7 @@ tox = "^4.8.0"
 mkdocs-material = "^9.2.0"
 mkdocstrings = { extras = ["python"], version = "^0.22.0" }
 hypothesis = "^6.82.6"
+types-setuptools = "^80.3.0.20250505"
 
 [build-system]
 requires = ["poetry-core>=1.5.1"]
@@ -66,6 +68,8 @@ include = '\.pyi?$'
 [tool.ruff]
 line-length = 88
 target-version = "py39"
+
+[tool.ruff.lint]
 select = [
     "E",  # pycodestyle errors
     "W",  # pycodestyle warnings
