--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "focusedme"
-version = "0.1.32"
+version = "0.1.33"
 description = "A minimalist Pomodoro timer that runs in your terminal"
 authors = ["Fabio Scopeta <scopeta@gmail.com>"]
 license = "MIT"
@@ -31,6 +31,7 @@ include = [
     "HISTORY.rst",
     "LICENSE",
     "focusedme/**/*.wav",
+    "config/**",
 ]
 
 [tool.poetry.dependencies]
@@ -38,7 +39,6 @@ python = "^3.9"
 simpleaudio = "^1.0.4"
 typer = "^0.9.0"
 rich = "^13.5.0"
-mkdocs-autorefs = "^1.4.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
@@ -52,6 +52,8 @@ mkdocs-material = "^9.2.0"
 mkdocstrings = { extras = ["python"], version = "^0.22.0" }
 hypothesis = "^6.82.6"
 types-setuptools = "^80.3.0.20250505"
+mkdocs-autorefs = "^1.4.1"
+poetry-dynamic-versioning = "^0.13.1"
 
 [build-system]
 requires = ["poetry-core>=1.5.1"]
@@ -93,3 +95,9 @@ addopts = "-ra -q --cov=focusedme --cov-report=term-missing"
 testpaths = [
     "tests",
 ]
+
+[tool.dynamic-versioning]
+# enable version injection at build time from Git tags
+enable = true
+inject = ["focusedme/__init__.py"]
+search = "\\d+\\.\\d+\\.\\d+"
