--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -14,6 +14,7 @@ on:
 
 permissions:
   contents: read
+  id-token: write
 
 jobs:
   release-build:
@@ -41,6 +42,10 @@ jobs:
   pypi-publish:
     runs-on: ubuntu-latest
     needs: release-build
+    # Trusted publishing with OIDC
+    environment:
+      name: pypi
+      url: https://pypi.org/project/focusedme
 
     steps:
       - name: Retrieve release distributions
@@ -49,9 +54,7 @@ jobs:
           name: release-dists
           path: dist/
 
-      - name: Publish to PyPI
-        uses: pypa/gh-action-pypi-publish@v1
+      - name: Publish release distributions to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN }}
           packages-dir: dist/
