--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
-    "Topic :: Office/Business :: Time Management",
+    "Topic :: Office/Business",
     "Topic :: Utilities",
 ]
 packages = [
