--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,10 +35,10 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.9"
-simpleaudio = "^1.0.4"
-typer = "^0.9.0"
-rich = "^13.5.0"
+python      = "^3.9"
+simpleaudio = { version = "^1.0.4", markers = "sys_platform != 'darwin'" }
+typer       = "^0.9.0"
+rich        = "^13.5.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
