--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,8 +36,7 @@ include = [
 
 [tool.poetry.dependencies]
 python      = "^3.9"
-simpleaudio = { version = "^1.0.4", markers = "sys_platform != 'darwin'" }
-typer       = "^0.17.0"
+simpleaudio = { version = "^1.0.4", markers = 'sys_platform != "darwin"' }
 rich        = "^13.5.0"
 
 [tool.poetry.group.dev.dependencies]
@@ -54,6 +53,7 @@ hypothesis = "^6.82.6"
 types-setuptools = "^80.3.0.20250505"
 mkdocs-autorefs = "^1.4.1"
 poetry-dynamic-versioning = "^0.13.1"
+typer       = "^0.9.0"  # moved from runtime
 
 [build-system]
 requires = ["poetry-core>=1.5.1"]
