fix: update documentation URL to GitHub Pages and improve workflow for building docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,61 +3,4 @@ site_description: A minimalist Pomodoro timer that runs in your terminal
 repo_url: https://github.com/scopeta/focusedme
 repo_name: scopeta/focusedme
 
-theme:
-  name: material
-  palette:
-    - scheme: default
-      primary: teal
-      accent: amber
-      toggle:
-        icon: material/brightness-7
-        name: Switch to dark mode
-    - scheme: slate
-      primary: teal
-      accent: amber
-      toggle:
-        icon: material/brightness-4
-        name: Switch to light mode
-  features:
-    - navigation.instant
-    - navigation.tracking
-    - navigation.sections
-    - navigation.expand
-    - navigation.indexes
-    - toc.integrate
-    - content.code.copy
-
-nav:
-  - Home: index.md
-  - Installation: installation.md
-  - Usage: usage.md
-  - API Reference: api.md
-  - Contributing: contributing.md
-  - Changelog: changelog.md
-
-markdown_extensions:
-  - admonition
-  - pymdownx.details
-  - pymdownx.superfences
-  - pymdownx.highlight:
-      anchor_linenums: true
-  - pymdownx.inlinehilite
-  - pymdownx.snippets
-  - pymdownx.superfences
-  - toc:
-      permalink: true
-
-plugins:
-  - search
-  - autorefs:
-      link_titles: true
-  - mkdocstrings:
-      default_handler: python
-      handlers:
-        python:
-          paths: [focusedme]
-          options:
-            show_source: true
-            show_root_heading: true
-            show_category_heading: true
-            show_bases: true
+# Remove MkDocs config now that Sphinx docs are used
