--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -41,7 +41,7 @@ jobs:
         run: poetry install --no-interaction --with dev
 
       - name: Build documentation
-        run: poetry run mkdocs build
+        run: make -C docs html
 
       - name: Configure GitHub Pages
         uses: actions/configure-pages@v2
@@ -49,7 +49,7 @@ jobs:
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: site
+          path: docs/_build/html
 
   deploy:
     environment:
