Chores/improve cicd (#37)
* feat: add GitHub Pages configuration step to documentation workflow

* fix: update deployment conditions for GitHub Pages and add PyPI token for publishing

* refactor: streamline PyPI publishing workflow by removing unnecessary permissions and comments

* fix: update permissions and improve PyPI publishing step in workflow

* fix: correct classifier entry for topic in pyproject.toml

* fix: align dependency formatting in pyproject.toml for consistency

* fix: update version number to 0.1.34 in pyproject.toml

* fix: update typer dependency version to ^0.12.3 in pyproject.toml

* fix: update typer dependency version to ^0.17.0 in pyproject.toml

* fix: update typer dependency version to ^0.9.0 and move from runtime

* fix: update version number to 0.1.35 in pyproject.toml

* fix: update version number to 0.1.36 in pyproject.toml

* fix: handle ImportError for simpleaudio module

* chore: bump version to 0.1.37

* chore: bump version to 0.1.38

* chore: bump version to 0.1.39

* chore: bump version to 0.1.40

* chore: bump version to 0.1.41

* chore: bump version to 0.1.42

* fix: update import statement for in_app_path to use absolute path

* chore: bump version to 0.1.43

* fix: improve config file loading with fallback to project root

* chore: bump version to 0.1.44

* fix: update documentation URL to GitHub Pages and improve workflow for building docs

* chore: bump version to 0.1.46

* fix: update documentation URL to point to the correct GitHub Pages site and improve Sphinx configuration

* chore: bump version to 0.1.47

* fix: streamline documentation workflow and add module reference

* chore: bump version to 0.1.48

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [tool.poetry]
 name = "focusedme"
-version = "0.1.33"
+version = "0.1.48"
 description = "A minimalist Pomodoro timer that runs in your terminal"
 authors = ["Fabio Scopeta <scopeta@gmail.com>"]
 license = "MIT"
 readme = "README.rst"
 homepage = "https://github.com/scopeta/focusedme"
 repository = "https://github.com/scopeta/focusedme"
-documentation = "https://focusedme.readthedocs.io"
+documentation = "https://scopeta.github.io/focusedme/"  # point to GitHub Pages site
 keywords = ["pomodoro", "timer", "productivity", "terminal", "cli"]
 classifiers = [
     "Development Status :: 4 - Beta",
@@ -20,7 +20,7 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
-    "Topic :: Office/Business :: Time Management",
+    "Topic :: Office/Business",
     "Topic :: Utilities",
 ]
 packages = [
@@ -35,10 +35,9 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.9"
-simpleaudio = "^1.0.4"
-typer = "^0.9.0"
-rich = "^13.5.0"
+python      = "^3.9"
+simpleaudio = { version = "^1.0.4", markers = 'sys_platform != "darwin"' }
+rich        = "^13.5.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
@@ -54,6 +53,9 @@ hypothesis = "^6.82.6"
 types-setuptools = "^80.3.0.20250505"
 mkdocs-autorefs = "^1.4.1"
 poetry-dynamic-versioning = "^0.13.1"
+typer       = "^0.9.0"  # moved from runtime
+sphinx = "^7.2.0"  # add Sphinx for building docs
+alabaster = "^0.7.12"  # Sphinx default theme
 
 [build-system]
 requires = ["poetry-core>=1.5.1"]
