--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,4 +1,4 @@
-name: Documentation
+name: GitHub Pages
 
 on:
   push:
@@ -17,17 +17,11 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  # Single deploy job since we're just deploying
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Setup Python
         uses: actions/setup-python@v5
@@ -39,30 +33,33 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libasound2-dev portaudio19-dev python3-dev
 
-      - name: Install Poetry
-        run: |
-          curl -sSL https://install.python-poetry.org | python3 -
-          echo "$HOME/.local/bin" >> $GITHUB_PATH
-
       - name: Install dependencies
         run: |
-          poetry config virtualenvs.create true
-          poetry config virtualenvs.in-project true
-          poetry install --no-interaction --with dev
+          python -m pip install --upgrade pip
+          python -m pip install sphinx sphinx-rtd-theme
 
       - name: Build documentation
         run: |
-          poetry run make -C docs html
+          cd docs
+          make html
+          touch _build/html/.nojekyll  # Prevent Jekyll processing
 
       - name: Setup Pages
+        id: pages
         uses: actions/configure-pages@v4
 
-      # Simplified upload process using directory upload instead of artifact
-      - name: Upload GitHub Pages content
+      - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: docs/_build/html
 
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
