Enhance Windows support and documentation
- Added Windows support without requiring Visual C++ Build Tools.
- Integrated playsound library for audio playback on Windows.
- Improved installation instructions and added a Windows installation guide.
- Updated HISTORY, README, and documentation to reflect changes.
- Added tests for audio playback functionality across platforms.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,4 +3,12 @@ site_description: A minimalist Pomodoro timer that runs in your terminal
 repo_url: https://github.com/scopeta/focusedme
 repo_name: scopeta/focusedme
 
-# Remove MkDocs config now that Sphinx docs are used
+nav:
+  - Home: index.md
+  - Installation:
+    - General: installation.rst
+    - Windows: windows_install.md
+  - Usage: usage.rst
+  - Contributing: contributing.rst
+  - History: history.rst
+  - Authors: authors.rst
