--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "focusedme"
-version = "0.1.78"
+version = "0.1.79"
 description = "A minimalist Pomodoro timer that runs in your terminal"
 authors = ["Fabio Scopeta <scopeta@gmail.com>"]
 license = "MIT"
@@ -36,7 +36,8 @@ include = [
 
 [tool.poetry.dependencies]
 python      = "^3.9"
-simpleaudio = { version = "^1.0.4", markers = 'sys_platform != "darwin"' }
+simpleaudio = { version = "^1.0.4", markers = 'sys_platform != "darwin" and sys_platform != "win32"' }
+playsound   = { version = "^1.3.0", markers = 'sys_platform == "win32"' }
 rich        = "^13.5.0"
 
 [tool.poetry.group.dev.dependencies]
