--- a/requirements-windows.txt
+++ b/requirements-windows.txt
@@ -1,4 +1,4 @@
 # FocusedMe Requirements for Windows
 # Windows users can simply run: pip install -r requirements-windows.txt
-playsound>=1.3.0
+# No special audio dependencies required - using built-in winsound module
 rich>=13.5.0
